assets/css/wp-enqueue.css
/*
Theme Name: Your Theme Name
Text Domain: your-text-domain
*/

.page .entry-title {display: none;}
.wp-block-post-title {display: none;}
.wp-block-button__link {margin: 2px; display: inline-block;}
.ui-widget .ui-widget-content {width: -webkit-fill-available;}

thead{background-color:#d6d8d9;}
tbody{
    list-style:none;
    padding:0;
    min-height:12em;
}
tr:nth-child(2n){
    background-color:#d6d8d9;
}

tbody tr:hover {
    background-color: #4CAF50;
    color: white;
    cursor: pointer;
}

iframe {
    width: 300%;
    height: 600px; /* Adjust the height as needed */
    border: none; /* Removes the default iframe border */
}
  
/* Apply styles to the button when hovering */
input[type="button"]:hover {
    cursor: pointer;
}

.button:hover {
    color: red;
    cursor: pointer;
}

ol {
    margin-left: 20px; /* Adjust the margin as needed */
}
  
ol ol {
    list-style-type: lower-alpha; /* Use lower-alpha for second-level list items (1.1, 1.2, etc.) */
    margin-left: 20px; /* Adjust the margin as needed */
}
  
.prev,
.next {
    position: absolute;
    top: 50%;
    font-size: 25px;
    color: #fff;
    cursor: pointer;
    transform: translateY(-50%);
}

.prev {
    left: 15px;
}

.next {
    right: 15px;
}

